[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag"
version = "0.1.0"
description = "A workflow that embeds, indexes and queries your documents on the fly, providing you with a simple RAG pipeline."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "llama-index-llms-openai",
  "llama-index-embeddings-openai",
  "llama-index-workflows>=2.5.0,<3.0.0"
]

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.hatch.envs.default.scripts]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check --fix ."
lint-check = ["ruff check ."]
typecheck = "ty check src"
test = "pytest"
all-check = ["format-check", "lint-check", "test"]
all-fix = ["format", "lint", "test"]

[tool.llamadeploy]
env_files = [".env"]

[tool.llamadeploy.workflows]
default = "rag.workflow:workflow"
